# rust-file-string-search

./: Cargo.toml  README.md
src/: main.rs
src/parse_options/: options.rs
test/: asd.txt
