[package]
name = "hons-string-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
regex = "1.5.5"
structopt = "0.3.26"
failure = "0.1.8"
exitfailure = "0.5.1"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.31"